Feature: add ability to generate deposit address by admin (#2679)
* Feature: add ability to generate deposit address by admin
